translation-tool/inputs/source_meta/objects/Product_to_Tool_Mapping__c.object
<CustomObject>
    <description>Product_to_Tool_Mapping</description>
    <fields>
        <fullName>Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HNS_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>HNS Product</description>
        <inlineHelpText>HNS Product</inlineHelpText>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Product to Tool Mappings</relationshipLabel>
        <relationshipName>Product_to_Tool_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRD_TOOL_MAP_ID__c</fullName>
        <description>Product to Tools Mapping ID</description>
        <externalId>true</externalId>
        <label>PRD TOOL MAP ID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tool__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Tool</description>
        <inlineHelpText>Tool</inlineHelpText>
        <label>Tool</label>
        <referenceTo>Tools_Master__c</referenceTo>
        <relationshipLabel>Product to Tool Mappings</relationshipLabel>
        <relationshipName>Product_to_Tool_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YAHS_Customer_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine whether this tool will be visible in customer portal or not.</description>
        <inlineHelpText>Please Check if you want to show this tool on customer portal.</inlineHelpText>
        <label>Customer Portal</label>
        <type>Checkbox</type>
    </fields>
    <label>Product to Tool Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PDTOOL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product to Tool Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>